accessibility errors on child pages are fixed; issues with color contrast; accessibility statement link added

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -163,7 +163,7 @@ $code-background: $light-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
 $anchor-color: $tertiary-color;
-$anchor-color-hover: scale-color($anchor-color, $lightness: -60%);
+$anchor-color-hover: scale-color($anchor-color, $lightness: -35%);
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
 $hr-width: $global-width;
