--- a/assets/scss/palette-blue-azure.scss
+++ b/assets/scss/palette-blue-azure.scss
@@ -11,7 +11,7 @@
 	h3,
 	.title,
 	blockquote {
-		color: $tertiary-color;
+		color: #215488;
 
 		&.button {
 			color: $white;
